--- a/flask-yfinance/requirements.txt
+++ b/flask-yfinance/requirements.txt
@@ -1,6 +1,7 @@
 altair==5.2.0
 anyio==4.2.0
 appdirs==1.4.4
+APScheduler==3.10.4
 apturl==0.5.2
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -16,7 +17,9 @@ beautifulsoup4==4.12.3
 bleach==6.1.0
 blinker==1.8.2
 Brlapi==0.8.3
+cachelib==0.9.0
 cachetools==5.3.2
+cattrs==23.2.3
 certifi==2024.6.2
 cffi==1.16.0
 chardet==4.0.0
@@ -47,6 +50,8 @@ executing==2.0.1
 fasteners==0.14.1
 fastjsonschema==2.19.1
 Flask==3.0.3
+Flask-APScheduler==1.13.1
+Flask-Caching==2.3.0
 fonttools==4.48.1
 fqdn==1.5.1
 frozendict==2.4.0
@@ -171,6 +176,7 @@ referencing==0.33.0
 regex==2024.5.15
 reportlab==3.6.8
 requests==2.32.3
+requests-cache==1.2.0
 requests-toolbelt==0.9.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
@@ -212,6 +218,7 @@ ubuntu-pro-client==8001
 ufw==0.36.1
 unattended-upgrades==0.1
 uri-template==1.3.0
+url-normalize==1.4.3
 urllib3==1.26.5
 usb-creator==0.3.7
 validators==0.22.0
@@ -228,4 +235,5 @@ wsproto==1.2.0
 xdg==5
 xkit==0.0.0
 yahoofinance==0.0.2
+yfinance==0.2.40
 zipp==1.0.0
