--- a/flask-yfinance/requirements.txt
+++ b/flask-yfinance/requirements.txt
@@ -1,7 +1,7 @@
 altair==5.2.0
+annotated-types==0.7.0
 anyio==4.2.0
 appdirs==1.4.4
-APScheduler==3.10.4
 apturl==0.5.2
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -9,6 +9,7 @@ arrow==1.3.0
 astor==0.8.1
 asttokens==2.4.1
 async-lru==2.0.4
+async-timeout==4.0.3
 attrs==23.2.0
 Babel==2.14.0
 base58==2.1.1
@@ -50,14 +51,14 @@ executing==2.0.1
 fasteners==0.14.1
 fastjsonschema==2.19.1
 Flask==3.0.3
-Flask-APScheduler==1.13.1
-Flask-Caching==2.3.0
+Flask-SQLAlchemy==3.1.1
 fonttools==4.48.1
 fqdn==1.5.1
 frozendict==2.4.0
 future==0.18.2
 gitdb==4.0.11
 GitPython==3.1.41
+greenlet==3.0.3
 gyp==0.1
 h11==0.14.0
 html5lib==1.1
@@ -145,6 +146,8 @@ pyarrow==15.0.0
 pycairo==1.20.1
 pycparser==2.21
 pycups==2.0.1
+pydantic==2.7.4
+pydantic_core==2.18.4
 pydeck==0.8.1b0
 Pygments==2.17.2
 PyGObject==3.42.1
@@ -155,6 +158,7 @@ Pympler==1.0.1
 PyNaCl==1.5.0
 pyOpenSSL==21.0.0
 pyparsing==2.4.7
+pyrate-limiter==2.10.0
 pyRFC3339==1.1
 pyrsistent==0.18.1
 PySocks==1.7.1
@@ -172,11 +176,13 @@ PyYAML==5.4.1
 pyzmq==25.1.2
 qtconsole==5.5.1
 QtPy==2.4.1
+redis==5.0.6
 referencing==0.33.0
 regex==2024.5.15
 reportlab==3.6.8
 requests==2.32.3
 requests-cache==1.2.0
+requests-ratelimiter==0.6.0
 requests-toolbelt==0.9.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
