--- a/flask-yfinance/requirements.txt
+++ b/flask-yfinance/requirements.txt
@@ -7,6 +7,8 @@ argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 astor==0.8.1
+astropy==6.1.1
+astropy-iers-data==0.2024.6.17.0.31.35
 asttokens==2.4.1
 async-lru==2.0.4
 async-timeout==4.0.3
@@ -29,6 +31,7 @@ click==8.1.7
 colorama==0.4.4
 comm==0.2.1
 command-not-found==0.3
+contourpy==1.2.1
 cryptography==3.4.8
 cupshelpers==1.0
 cycler==0.12.1
@@ -102,7 +105,7 @@ macaroonbakery==1.3.1
 Mako==1.1.3
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.5.1
+matplotlib==3.9.0
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==3.0.2
@@ -116,20 +119,21 @@ nest-asyncio==1.6.0
 netifaces==0.11.0
 notebook==7.0.7
 notebook_shim==0.2.3
-numpy==1.21.4
+numpy==1.23.5
 oauthlib==3.2.0
 olefile==0.46
 openpyxl==3.1.2
 outcome==1.3.0.post0
 overrides==7.7.0
 packaging==23.2
-pandas==1.3.4
+pandas==2.2.2
 pandocfilters==1.5.1
 paramiko==2.9.3
 parso==0.8.3
 peewee==3.17.0
 pexpect==4.8.0
 Pillow==9.1.0
+pipdeptree==2.23.0
 platformdirs==4.1.0
 plotly==5.5.0
 prometheus-client==0.19.0
@@ -148,6 +152,7 @@ pycups==2.0.1
 pydantic==2.7.4
 pydantic_core==2.18.4
 pydeck==0.8.1b0
+pyerfa==2.0.1.4
 Pygments==2.17.2
 PyGObject==3.42.1
 PyInquirer==1.0.3
@@ -187,8 +192,7 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.7.1
 rpds-py==0.17.1
-scipy==1.7.3
-seaborn==0.11.2
+scipy==1.13.1
 SecretStorage==3.3.1
 selenium==4.21.0
 Send2Trash==1.8.2
