--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^17.3.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "bulma": "^1.0.1",
+    "bulma-carousel": "^4.0.24",
     "ng2-google-charts": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
